Bug 473775 - Clearing searched text doesn't restore full content of current folder
Summary: Clearing searched text doesn't restore full content of current folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 23.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-26 11:57 UTC by medin
Modified: 2023-09-09 03:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2023-08-26 11:57:51 UTC
If you search for something then clear the typed text, either via delete key or clear icon, the full list of items isn't restored.
Comment 1 Bug Janitor Service 2023-08-27 01:28:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/606
Comment 2 Bug Janitor Service 2023-08-31 08:35:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/610
Comment 3 Méven Car 2023-09-04 07:39:17 UTC
Git commit c4bb3db0229bef8adee1daa183892cebba5efe72 by Méven Car, on behalf of Amol Godbole.
Committed on 04/09/2023 at 09:39.
Pushed by meven into branch 'master'.

Restore the URL when DolphinSearchBox is cleared

Currently, the URL navigator is not updated when the search box is cleared. This MR restores the URL, by closing and reopening the box.

The call for emitting closeRequest() on pressing Esc has been replaced with emitCloseRequest(). The wait duration before starting a search has been reduced to 500ms to increase responsiveness.

Also, the bugfix for BUG: 423328 is slightly incorrect and causes the search term to not be displayed when opening a saved search for the first time. As a better solution for this bug, DolphinSearchBox::setText() now updates the text only if the text has changed.

M  +6    -0    src/dolphinviewcontainer.cpp
M  +1    -0    src/dolphinviewcontainer.h
M  +16   -9    src/search/dolphinsearchbox.cpp
M  +5    -0    src/search/dolphinsearchbox.h

https://invent.kde.org/system/dolphin/-/commit/c4bb3db0229bef8adee1daa183892cebba5efe72