DolphinSearchBox: reset the view to the containing folder when clearing search

BUG: 473775